consumer set up, still need processing logic

--- a/TestObjectService/appsettings.Development.json
+++ b/TestObjectService/appsettings.Development.json
@@ -12,9 +12,6 @@
     "HostName": "localhost",
     "Port": "5672",
     "ClientProvidedName": "leaktest-service",
-    "ExchangeName": "leaktest-exchange",
-    "RoutingKey": "",
-    "RequestQueue": "",
-    "ResponseQueue": ""
+    "ExchangeName": "leaktest-exchange"
   }
 }
