--- a/TestObjectService/appsettings.json
+++ b/TestObjectService/appsettings.json
@@ -11,10 +11,7 @@
     "VirtualHost": "/",
     "HostName": "localhost",
     "Port": "5672",
-    "ClientProvidedName": "leaktest-service",
-    "ExchangeName": "leaktest-exchange",
-    "RoutingKey": "",
-    "RequestQueue": "",
-    "ResponseQueue": ""
+    "ClientProvidedName": "test-object-service",
+    "ExchangeName": "test-object-exchange"
   }
 }
