--- a/TestObjectService/appsettings.json
+++ b/TestObjectService/appsettings.json
@@ -13,5 +13,9 @@
     "Port": "5672",
     "ClientProvidedName": "test-object-service",
     "ExchangeName": "test-object-exchange"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost\\SQLEXPRESS;database=nolek_testobject;Trusted_connection=True;Encrypt=False"
   }
 }
+
