--- a/TestObjectService/TestObjectService.csproj
+++ b/TestObjectService/TestObjectService.csproj
@@ -24,4 +24,8 @@
         <Link>.dockerignore</Link>
       </Content>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
 </Project>
