--- a/TestObjectService/appsettings.Development.json
+++ b/TestObjectService/appsettings.Development.json
@@ -11,7 +11,10 @@
     "VirtualHost": "/",
     "HostName": "localhost",
     "Port": "5672",
-    "ClientProvidedName": "leaktest-service",
-    "ExchangeName": "leaktest-exchange"
+    "ClientProvidedName": "test-object-service",
+    "ExchangeName": "test-object-exchange"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd;TrustServerCertificate=True"
   }
 }
