--- a/TestObjectService/appsettings.docker.json
+++ b/TestObjectService/appsettings.docker.json
@@ -9,12 +9,12 @@
     "UserName": "guest",
     "Password": "guest",
     "VirtualHost": "/",
-    "HostName": "localhost",
+    "HostName": "rabbit-standalone",
     "Port": "5672",
     "ClientProvidedName": "test-object-service",
     "ExchangeName": "test-object-exchange"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd"
+    "DefaultConnection": "server=sql-standalone,1443;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd"
   }
 }
