add single testobj working with rmq

--- a/TestObjectService/appsettings.docker.json
+++ b/TestObjectService/appsettings.docker.json
@@ -15,6 +15,6 @@
     "ExchangeName": "test-object-exchange"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=sql-standalone,1443;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd"
+    "DefaultConnection": "server=localhost,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd;TrustServerCertificate=True"
   }
 }
