--- a/TestObjectService/appsettings.json
+++ b/TestObjectService/appsettings.json
@@ -15,6 +15,6 @@
     "ExchangeName": "test-object-exchange"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd"
+    "DefaultConnection": "server=localhost,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd;TrustServerCertificate=True"
   }
 }
