--- a/TestObjectService/appsettings.docker.json
+++ b/TestObjectService/appsettings.docker.json
@@ -9,10 +9,18 @@
     "UserName": "guest",
     "Password": "guest",
     "VirtualHost": "/",
-    "HostName": "rabbit-standalone",
+    "HostName": "localhost",
     "Port": "5672",
     "ClientProvidedName": "test-object-service",
     "ExchangeName": "test-object-exchange"
+  },
+  "RabbitMqConfig": {
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "HostName": "localhost",
+    "Port": "5672",
+    "ClientProvidedName": "test-object-service",
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd;TrustServerCertificate=True"
