--- a/TestObjectService/appsettings.json
+++ b/TestObjectService/appsettings.json
@@ -14,6 +14,14 @@
     "ClientProvidedName": "test-object-service",
     "ExchangeName": "test-object-exchange"
   },
+  "RabbitMqConfig": {
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "HostName": "localhost",
+    "Port": "5672",
+    "ClientProvidedName": "test-object-service",
+  },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd;TrustServerCertificate=True"
   }
