--- a/TestObjectService/appsettings.json
+++ b/TestObjectService/appsettings.json
@@ -20,7 +20,7 @@
     "VirtualHost": "/",
     "HostName": "localhost",
     "Port": "5672",
-    "ClientProvidedName": "test-object-service",
+    "ClientProvidedName": "test-object-service"
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd;TrustServerCertificate=True"
