--- a/TestObjectService/appsettings.Development.json
+++ b/TestObjectService/appsettings.Development.json
@@ -23,6 +23,6 @@
     "ClientProvidedName": "test-object-service"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd;TrustServerCertificate=True"
+    "DefaultConnection": "server=localhost\\SQLEXPRESS;database=nolek_testobject;Trusted_connection=True;Encrypt=False"
   }
 }
