docker compose configs

--- a/TestObjectService/Dockerfile
+++ b/TestObjectService/Dockerfile
@@ -1,7 +1,13 @@
-﻿FROM mcr.microsoft.com/dotnet/runtime:7.0 AS base
+﻿# Use the .NET runtime as the base image for the final container
+FROM mcr.microsoft.com/dotnet/runtime:7.0 AS base
 WORKDIR /app
 
+# Use the .NET SDK image to build the application
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+
+RUN dotnet tool install --global dotnet-ef --version 7.0.13
+ENV PATH="$PATH:/root/.dotnet/tools"
+
 WORKDIR /src
 COPY ["TestObjectService/TestObjectService.csproj", "TestObjectService/"]
 RUN dotnet restore "TestObjectService/TestObjectService.csproj"
@@ -9,11 +15,19 @@ COPY . .
 WORKDIR "/src/TestObjectService"
 RUN dotnet build "TestObjectService.csproj" -c Release -o /app/build
 
+# Publish the application
 FROM build AS publish
-RUN dotnet publish "TestObjectService.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "TestObjectService.csproj" -c Release -o /app/publish /p:UseAppHost=true
 
-FROM base AS final
+
+# Final stage/image
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS final
+
 WORKDIR /app
-COPY TestObjectService/migrations.sql /app/migrations.sql
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "TestObjectService.dll"]
+
+# Ensure the tool path is in the environment for runtime
+ENV PATH="$PATH:/root/.dotnet/tools"
+
+# Set the command to run your application
+CMD ["dotnet", "TestObjectService.dll"]
