--- a/TestObjectService/appsettings.json
+++ b/TestObjectService/appsettings.json
@@ -23,6 +23,6 @@
     "ClientProvidedName": "test-object-service"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd;TrustServerCertificate=True"
+    "DefaultConnection": "server=docker-sql-1,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd;TrustServerCertificate=True"
   }
 }
