--- a/TestObjectService/appsettings.Development.json
+++ b/TestObjectService/appsettings.Development.json
@@ -9,7 +9,7 @@
     "UserName": "guest",
     "Password": "guest",
     "VirtualHost": "/",
-    "HostName": "localhost",
+    "HostName": "rmq",
     "Port": "5672",
     "ClientProvidedName": "test-object-service",
     "ExchangeName": "test-object-exchange"
@@ -18,11 +18,11 @@
     "UserName": "guest",
     "Password": "guest",
     "VirtualHost": "/",
-    "HostName": "localhost",
+    "HostName": "rmq",
     "Port": "5672",
     "ClientProvidedName": "test-object-service"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=45.136.70.5,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd;TrustServerCertificate=True"
+    "DefaultConnection": "server=localhost,1433;Initial Catalog=TestObjectDb;USER ID=sa;Password=Passw0rd;TrustServerCertificate=True"
   }
 }
