--- a/TestObjectService/appsettings.docker.json
+++ b/TestObjectService/appsettings.docker.json
@@ -9,7 +9,7 @@
     "UserName": "guest",
     "Password": "guest",
     "VirtualHost": "/",
-    "HostName": "docker-rabbitmq-1",
+    "HostName": "rmq",
     "Port": "5672",
     "ClientProvidedName": "test-object-service",
     "ExchangeName": "test-object-exchange"
@@ -18,7 +18,7 @@
     "UserName": "guest",
     "Password": "guest",
     "VirtualHost": "/",
-    "HostName": "docker-rabbitmq-1",
+    "HostName": "rmq",
     "Port": "5672",
     "ClientProvidedName": "test-object-service"
   },
